<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="200sp"
		android:id="@+id/view"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:background="@drawable/rounded_corners"
		android:gravity="center"
		android:orientation="vertical">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="27sp"
			android:gravity="center"
			android:textColor="@color/white"
			android:text="@string/friendship_calculator"
			android:textStyle="bold"/>
		<TextView
			android:layout_marginTop="12sp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="15sp"
			android:gravity="center"
			android:textColor="@color/white"
			android:text="@string/check_your_friendship_status_with_your_friend" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintTop_toBottomOf="@+id/view"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:gravity="center">
		<EditText
			android:paddingStart="15sp"
			android:paddingEnd="15sp"
			android:background="@drawable/edit_text_rounded"
			android:layout_width="300sp"
			android:layout_height="50sp"
			android:hint="@string/enter_your_name"
			android:inputType="text"
			android:autofillHints="@string/enter_your_name"
			android:id="@+id/name"/>
		<EditText
			android:paddingStart="15sp"
			android:paddingEnd="15sp"
			android:background="@drawable/edit_text_rounded"
			android:layout_width="300sp"
			android:layout_height="50sp"
			android:hint="@string/enter_your_friend_s_name"
			android:inputType="text"
			android:layout_marginTop="25sp"
			android:autofillHints="@string/enter_your_name"
			android:id="@+id/friend_name"/>
		<Button
			android:textColor="@color/white"
			android:background="@drawable/rounded_button"
			android:layout_width="150sp"
			android:layout_height="wrap_content"
			android:layout_marginTop="25sp"
			android:text="@string/calculate"
			android:textAllCaps="false"
			android:id="@+id/calculateButton"/>
		<TextView
			android:layout_marginTop="40sp"
			android:layout_width="125sp"
			android:layout_height="125sp"
			android:textSize="16sp"
			android:textColor="@color/white"
			android:background="@drawable/ic_heart"
			android:gravity="center"
			android:id="@+id/percentage"/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>